syntax = "proto3";

package rpc;

// The greeting service definition.
service Account {
  // Sends a greeting
  rpc ChangeBalance (ChangeBalanceRequest) returns (AccountReply) {}
  rpc GetBalance (GetBalanceRequest) returns (AccountReply) {}
  rpc Create (CreateRequest) returns (AccountReply) {}
}

// The request message containing the account id and amount (could be negative to reduce).
message ChangeBalanceRequest {
  string id = 1;
  int32 amount = 2;
}

message GetBalanceRequest {
  string id = 1;
}

// The response message containing the greetings
message AccountReply {
  string id = 1;
  int32 balance = 2;
}

message CreateRequest {

}